--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet"  href="/style.css">
   </head>
   <body>
     <%= erb(:"partials/navigation", :layout => false) %>
 
 <%# template content will be injected here %>
     <%= yield %>
+    <%= erb(:"partials/footer", :layout => false) %>
   </body>
 </html>
