--- a/views/partials/navigation.erb
+++ b/views/partials/navigation.erb
@@ -1,4 +1,4 @@
 <nav class="nav">
-  <a href="/">Posts</a>
-  <a href="/new">New Post</a>
+  <img id="logo" src="https://cdn1.iconfinder.com/data/icons/google_jfk_icons_by_carlosjj/512/youtube.png" alt="youtubeimg">
+  <a href="/">Homepage</a>
 </nav>
