--- a/views/posts/show.erb
+++ b/views/posts/show.erb
@@ -1,4 +1,8 @@
- <h1><%= @post[:title] %></h1>
- <p><%= @post[:body] %></p>
- <img src="<%= @post[:src]%>" alt=""> <br>
- <a href="/<%= @post[:id] %>/edit">edit</a>
+<div class="video_text">
+  <h1><%= @post[:title] %></h1>
+
+<div class="video">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @post[:embed_code] %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+<p><%= @post[:body] %></p>
+</div>
